# projet

etrangernatio/: function.c  function.h  main.c  makefile  prog  utulisateur.txt
gagnant/: fonction.c  fonction.h  main.c  makefile  prog  utilisateur.txt  vote.txt
project5ihebiss/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  projectihebiss.glade  projectihebiss.gladep
project5ihebiss/autom4te.cache/: output.0  requests  traces.0  traces.1
project5ihebiss/po/: Makefile  Makefile.in
project5ihebiss/src/: Makefile  Makefile.am  Makefile.in  bureau.txt  bureaudevote.c  bureaudevote.h  callbacks.c  callbacks.h  interface.c  interface.h.bak  main.c  projectihebiss  utulisateur.txt  vote.txt
project5ihebiss/src/.deps/: bureaudevote.Po  callbacks.Po
